tests/baselines/reference/genericDerivedTypeWithSpecializedBase2.errors.txt
tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts(11,1): error TS2322: Type 'B<数字>' is not assignable to type 'A<{ length: 数字; foo: 数字; }>'.
  Types of property 'x' are incompatible.
    Type '文字' is not assignable to type '{ length: 数字; foo: 数字; }'.


==== tests/cases/compiler/genericDerivedTypeWithSpecializedBase2.ts (1 errors) ====
    class A<T extends { length: number }> {
        x: T;
    }
    
    class B<U> extends A<string> {
        y: U;
    }
    
    var x: A<{ length: number; foo: number }>;
    var y: B<number>;
    x = y;  // error
    ~
!!! error TS2322: Type 'B<数字>' is not assignable to type 'A<{ length: 数字; foo: 数字; }>'.
!!! error TS2322:   Types of property 'x' are incompatible.
!!! error TS2322:     Type '文字' is not assignable to type '{ length: 数字; foo: 数字; }'.
    